--- a/AnotherProject/AnotherProject.csproj
+++ b/AnotherProject/AnotherProject.csproj
@@ -188,14 +188,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
-    <Compile Include="DAL\SchoolContext.cs" />
-    <Compile Include="Models\AddTest.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>AddTest.dbml</DependentUpon>
-    </Compile>
+    <Compile Include="Controllers\SubProductController.cs" />
+    <Compile Include="DAL\ProductContext.cs" />
+    <Compile Include="Models\BlogModel.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Enrollment.cs" />
     <Compile Include="Models\Game.cs" />
@@ -206,7 +204,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\NStudent.cs" />
+    <Compile Include="Models\NStudent.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Student.cs">
       <DependentUpon>StudentModel.tt</DependentUpon>
@@ -225,6 +225,10 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>StudentModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SubProduct.cs" />
+    <Compile Include="Models\Teacher.cs">
+      <DependentUpon>StudentModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -302,16 +306,13 @@
     </Content>
     <Content Include="Models\StudentModel.edmx.diagram">
       <DependentUpon>StudentModel.edmx</DependentUpon>
+      <SubType>Designer</SubType>
     </Content>
+    <Content Include="Models\StudentModel.edmx.sql" />
     <Content Include="Models\StudentModel.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>StudentModel.edmx</DependentUpon>
       <LastGenOutput>StudentModel.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\AddTest.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>AddTest.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
     </Content>
     <None Include="Properties\PublishProfiles\damonshuter.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
@@ -374,15 +375,16 @@
     <Content Include="Views\Student\Create.cshtml" />
     <Content Include="Views\Student\Edit.cshtml" />
     <Content Include="Views\Student\Delete.cshtml" />
-    <Content Include="Views\GetWeather.cshtml" />
     <Content Include="Views\Home\FactoryViewer.cshtml" />
     <Content Include="Views\Home\Game.cshtml" />
     <Content Include="Views\Game\SampleGame.cshtml" />
     <Content Include="Views\Home\AddToWebsite.cshtml" />
-    <Content Include="Views\Home\Blog.cshtml" />
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Product\Edit.cshtml" />
+    <Content Include="Views\SubProduct\Index.cshtml" />
+    <Content Include="Views\Blog\Create.cshtml" />
+    <Content Include="Views\Blog\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -395,9 +397,6 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Models\AddTest.dbml.layout">
-      <DependentUpon>AddTest.dbml</DependentUpon>
-    </None>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
