--- a/AnotherProject/AnotherProject.csproj
+++ b/AnotherProject/AnotherProject.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\SubProductController.cs" />
+    <Compile Include="DAL\BlogContext.cs" />
     <Compile Include="DAL\ProductContext.cs" />
     <Compile Include="Models\BlogModel.cs" />
     <Compile Include="Models\Course.cs" />
@@ -315,9 +316,10 @@
       <LastGenOutput>StudentModel.cs</LastGenOutput>
     </Content>
     <None Include="Properties\PublishProfiles\damonshuter.pubxml" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-1.8.2.min.js" />
+    <None Include="Scripts\jquery-2.1.3.intellisense.js" />
+    <Content Include="Scripts\jquery-2.1.3.js" />
+    <Content Include="Scripts\jquery-2.1.3.min.js" />
+    <Content Include="Scripts\jquery-2.1.3.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
